Fixed a bug where letters with descenders would be clipped at the very bottom

--- a/pre/public/css/index.styl
+++ b/pre/public/css/index.styl
@@ -151,7 +151,8 @@ h2.section
 							font-weight bold
 							font-style italic
 							font-size 17px
-							margin-bottom 7px
+							height 18px
+							margin-bottom 6px
 							ofEllipsis()
 						article p
 							line-height 1.45
